--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
                 <configuration>
                     <jdkVersion>1.8</jdkVersion>
                     <!-- Use your own application name -->
-                    <appName>question-bank-sha</appName>
+                    <appName>message-bank-sha</appName>
                     <processTypes>
                         <!-- Tell Heroku how to launch your application -->
                         <!-- You might have to remove the ./ in front   -->
